tests/e2e/not_allowed/in.error
Error: syntax error in story at line 1, column 1

1|    in = 1
      ^^

E0030: `in` is reserved for future use
